DevOps-using release build of the .Net 6 server

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3504,13 +3504,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -ExcludeCategories ResourcePermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ConflictingViewPermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,NoConflictingPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Other_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3541,13 +3548,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ResourcePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Resource_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3578,13 +3592,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category OverlappingUserGroupsPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Overlapping_User_Groups_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3615,13 +3636,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingViewPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Conflicting_View_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3652,13 +3680,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingExecutePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Conflicting_Execute_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3689,13 +3724,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingContributeViewExecutePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Conflicting_Contribute_View_Execute_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3726,13 +3768,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingViewExecutePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Conflicting_View_Execute_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
@@ -3763,13 +3812,20 @@ stages:
         runVersion: 'latestFromBranch'
         branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
         allowPartiallySucceededBuilds: true
-        artifactName: 'ServerBinaries'
+        artifactName: 'Release Server'
         targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category NoConflictingPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'No_Conflicting_Permissions_Security_Specs_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
   
     - task: PublishTestResults@2
       inputs:
