--- a/Dev/Dev2.IntegrationTests/Dev2.Integration.Tests.csproj
+++ b/Dev/Dev2.IntegrationTests/Dev2.Integration.Tests.csproj
@@ -418,6 +418,8 @@
     <PackageReference Include="Prism.Mvvm">
       <Version>1.1.1</Version>
     </PackageReference>
+    <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="System.Threading.Tasks.Extensions">
       <Version>4.5.4</Version>
     </PackageReference>
