DevOps-patching another unit test

--- a/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
+++ b/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
@@ -476,6 +476,9 @@
       <Link>App.config</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Settings\Settings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="XML\ResourceWithErrors.xml" />
