--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -4438,7 +4438,7 @@ stages:
         $LastReadVersion = "0.0.0.0"
         foreach ($file in Get-ChildItem -recurse "$(Agent.BuildDirectory)\s\Dev") {
             if (($file.Name.EndsWith(".dll") -or ($file.Name.EndsWith(".exe") -and -Not $file.Name.EndsWith(".vshost.exe"))) -and ($file.Name.StartsWith("Dev2.") -or $file.Name.StartsWith("Warewolf.") -or $file.Name.StartsWith("WareWolf")) -and $file.Name -ne "Warewolf.Usage.dll") {
-                 Get version.
+                # Get version.
                 $ReadVersion = [system.diagnostics.fileversioninfo]::GetVersionInfo($file.FullName).FileVersion
         
                  Find highest version
@@ -4451,7 +4451,7 @@ stages:
                     $HighestReadVersion = $ReadVersion
                 }
         
-                 Check for invalid.
+                # Check for invalid.
                 if ($ReadVersion.StartsWith("0.0.") -or ($LastReadVersion -ne $ReadVersion -and $LastReadVersion -ne "0.0.0.0")) {
                     $getFullPath = $file.FullName
                     Write-Host ERROR! Invalid version! $getFullPath $ReadVersion $LastReadVersion
