Revert "DevOps-apparently this path changed after the merge"
This reverts commit b633811c6b777dd43ebf22aecd99b885453cc948.

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -4461,7 +4461,7 @@ stages:
             }
         }
         Out-File -LiteralPath "$(Agent.BuildDirectory)\s\Dev\Dev2.Server\bin\Release\net48\win\FullVersionString" -InputObject $HighestReadVersion -Encoding default -Force
-        Out-File -LiteralPath "$(Agent.BuildDirectory)\s\Dev\Dev2.Studio\bin\Any CPU\Release\net48\win\FullVersionString" -InputObject $HighestReadVersion -Encoding default -Force
+        Out-File -LiteralPath "$(Agent.BuildDirectory)\s\Dev\Dev2.Studio\bin\Release\net48\win\FullVersionString" -InputObject $HighestReadVersion -Encoding default -Force
         git -C "$(Build.SourcesDirectory)" tag $HighestReadVersion
         git -C "$(Build.SourcesDirectory)" push https://ashley.lewis%40theunlimited.co.za:$env:GitLabTagsAccount@gitlab.com/warewolf/warewolf $HighestReadVersion
         Write-Host "vso[build.updatebuildnumber]$(Build.BuildNumber) ($HighestReadVersion)"
@@ -4477,7 +4477,7 @@ stages:
   
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Agent.BuildDirectory)\\s\\Dev\\Dev2.Studio\\bin\\Any CPU\\Release\\net48\\win'
+        PathtoPublish: '$(Agent.BuildDirectory)\\s\\Dev\\Dev2.Studio\\bin\\Release\\net48\\win'
         ArtifactName: 'Release Studio'
         publishLocation: 'Container'
         StoreAsTar: false
