--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -4,6 +4,9 @@ trigger:
 schedules:
 - cron: '0 12 * * 0'
   displayName: Weekly Sunday build
+  branches:
+    include:
+    - *
   batch: true
 
 pool:
