--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -1,6 +1,11 @@
 trigger:
   none
 
+schedules:
+- cron: '0 12 * * 0'
+  displayName: Weekly Sunday build
+  batch: true
+
 pool:
   vmImage: 'windows-2022'
 
