DevOps-patch for error: "Could not load file or assembly"

--- a/Dev/Warewolf.UIBindingTests.Core/Warewolf.UIBindingTests.Core.csproj
+++ b/Dev/Warewolf.UIBindingTests.Core/Warewolf.UIBindingTests.Core.csproj
@@ -39,6 +39,9 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="InfragisticsWPF4.DataPresenter.v15.1">
+      <HintPath>..\Binaries\InfragisticsWPF4.DataPresenter.v15.1.dll</HintPath>
+    </Reference>
     <Reference Include="InfragisticsWPF4.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Binaries\InfragisticsWPF4.v15.1.dll</HintPath>
