--- a/Dev/Warewolf.UIBindingTests.ServerSource/Warewolf.UIBindingTests.ServerSource.csproj
+++ b/Dev/Warewolf.UIBindingTests.ServerSource/Warewolf.UIBindingTests.ServerSource.csproj
@@ -42,6 +42,9 @@
     <Reference Include="InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1">
       <HintPath>..\Binaries\InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1.dll</HintPath>
     </Reference>
+    <Reference Include="InfragisticsWPF4.DataPresenter.v15.1">
+      <HintPath>..\Binaries\InfragisticsWPF4.DataPresenter.v15.1.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
