7566-Adding coverlet.msbuild

--- a/Dev/ConsoleAppToTestExecuteCommandLineActivity/ConsoleAppToTestExecuteCommandLineActivity.csproj
+++ b/Dev/ConsoleAppToTestExecuteCommandLineActivity/ConsoleAppToTestExecuteCommandLineActivity.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
     </PackageReference>
