--- a/Dev/Dev2.Runtime.Tests/Dev2.Runtime.Tests.csproj
+++ b/Dev/Dev2.Runtime.Tests/Dev2.Runtime.Tests.csproj
@@ -654,6 +654,10 @@
     <PackageReference Include="Caliburn.Micro">
       <Version>1.4.1</Version>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Dropbox.Api">
       <Version>6.15.0</Version>
     </PackageReference>
