--- a/Dev/Dev2.Runtime.WebServer.Tests/Dev2.Runtime.WebServer.Tests.csproj
+++ b/Dev/Dev2.Runtime.WebServer.Tests/Dev2.Runtime.WebServer.Tests.csproj
@@ -108,6 +108,10 @@
     <PackageReference Include="Castle.Core">
       <Version>4.4.0</Version>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
       <Version>16.11.0</Version>
     </PackageReference>
