--- a/Dev/Dev2.Server.Tests/Dev2.Server.Tests.csproj
+++ b/Dev/Dev2.Server.Tests/Dev2.Server.Tests.csproj
@@ -119,6 +119,10 @@
     <PackageReference Include="Castle.Core">
       <Version>4.4.0</Version>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>16.8.3</Version>
     </PackageReference>
