--- a/Dev/Dev2.Sql.Tests/Dev2.Sql.Tests.csproj
+++ b/Dev/Dev2.Sql.Tests/Dev2.Sql.Tests.csproj
@@ -94,6 +94,10 @@
     <EmbeddedResource Include="Resources\WorkflowResult.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
       <Version>16.11.0</Version>
     </PackageReference>
