--- a/Dev/Dev2.Studio.Tests/Dev2.Studio.Tests.csproj
+++ b/Dev/Dev2.Studio.Tests/Dev2.Studio.Tests.csproj
@@ -47,6 +47,10 @@
     <Compile Include="ViewModels\Workflow\DsfActivityDropViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter">
