--- a/Dev/Warewolf.ResourceManagement.Tests/Warewolf.ResourceManagement.Tests.csproj
+++ b/Dev/Warewolf.ResourceManagement.Tests/Warewolf.ResourceManagement.Tests.csproj
@@ -59,6 +59,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
       <Version>16.11.0</Version>
     </PackageReference>
