--- a/Dev/Warewolf.Security.Specs/Warewolf.Security.Specs.csproj
+++ b/Dev/Warewolf.Security.Specs/Warewolf.Security.Specs.csproj
@@ -121,6 +121,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions">
       <Version>3.4.0</Version>
     </PackageReference>
