--- a/Dev/Warewolf.UIBindingTests.ExchangeSource/Warewolf.UIBindingTests.ExchangeSource.csproj
+++ b/Dev/Warewolf.UIBindingTests.ExchangeSource/Warewolf.UIBindingTests.ExchangeSource.csproj
@@ -100,6 +100,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Expression.Blend.Sdk">
       <Version>1.0.2</Version>
     </PackageReference>
