--- a/Dev/Warewolf.UIBindingTests.Odbc/Warewolf.UIBindingTests.Odbc.csproj
+++ b/Dev/Warewolf.UIBindingTests.Odbc/Warewolf.UIBindingTests.Odbc.csproj
@@ -108,6 +108,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FontAwesome.WPF">
       <Version>4.5.0.8</Version>
     </PackageReference>
