--- a/Dev/Warewolf.UIBindingTests.RabbitMqSource/Warewolf.UIBindingTests.RabbitMqSource.csproj
+++ b/Dev/Warewolf.UIBindingTests.RabbitMqSource/Warewolf.UIBindingTests.RabbitMqSource.csproj
@@ -120,6 +120,10 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
       <Version>16.11.0</Version>
     </PackageReference>
