7566-turn on verbose logging

--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5558,7 +5558,7 @@ stages:
   
     - script: |
         cd "D:\Builds\SonarQube"
-        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" end /d:"sonar.login=%SonarPassword%"
+        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" end /d:"sonar.login=%SonarPassword%" /d:sonar.verbose=true
       env:
         SonarPassword: $(SonarAdminPassword)
       displayName: "End Sonar Runner"
