--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5545,7 +5545,7 @@ stages:
         IF "%bamboo_RerunBuildTriggerReason_noOfRetries%"=="" (set SonarVersion="$(Build.TriggeredBy.BuildId)") ELSE (set SonarVersion="$(Build.TriggeredBy.BuildId)-%RerunBuildTriggerReason_noOfRetries%")
         cd "D:\Builds\SonarQube"
         nuget install dotnet-framework-sonarscanner -ExcludeVersion -NonInteractive -OutputDirectory .
-        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" begin /o:warewolf /k:Warewolf_DotNet_Framework /n:Warewolf_DotNet_Framework /v:%SonarVersion% /d:sonar.login="%SonarPassword%" /s:"$(Pipeline.Workspace)\SonarQube.Analysis.xml" /d:sonar.projectBaseDir="D:\Builds\SonarQube"
+        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" begin /o:warewolf /k:Warewolf_DotNet_Framework /n:Warewolf_DotNet_Framework /v:%SonarVersion% /d:sonar.login="%SonarPassword%" /s:"$(Pipeline.Workspace)\SonarQube.Analysis.xml" /d:sonar.projectBaseDir="D:\Builds\SonarQube" /d:sonar.verbose=true
       env:
         SonarPassword: $(SonarAdminPassword)
       displayName: "Begin Sonar Runner"
@@ -5558,7 +5558,7 @@ stages:
   
     - script: |
         cd "D:\Builds\SonarQube"
-        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" end /d:"sonar.login=%SonarPassword%" /d:sonar.verbose=true
+        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" end /d:"sonar.login=%SonarPassword%"
       env:
         SonarPassword: $(SonarAdminPassword)
       displayName: "End Sonar Runner"
