7566-adding logging aorund finding snapshots

--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -108,7 +108,9 @@ stages:
         failTaskOnFailedTests: true
         testRunTitle: 'Unit Tests'
        
-    - script: 'if not exist "$(Agent.BuildDirectory)/TestResults/*.trx" exit 1'
+    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
+
+    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.coverage" exit 1'
 
     - task: PublishBuildArtifacts@1
       inputs:
@@ -5781,6 +5783,14 @@ stages:
       displayName: "Use JDK11 by default"
     
     - powershell: |
+        $GetSnapshots = Get-ChildItem "$TestResultsPath\**\*.coverage"
+        if ($GetSnapshots.count -gt 0) {
+            foreach ($snapshot in $GetSnapshots) {
+                Write-Host Snapshot found: $snapshot
+            }
+        } else {
+            Write-Host No snapshots found!
+        }
         $branchSource = "$(Build.SourceBranch)"
         $ThisBranch = $branchSource -replace "refs/heads/", ""
         $SonarRunnerXML = @"
