7566-convert snapshot merging to Microsoft.CodeCoverage.Console.exe

--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5783,13 +5783,14 @@ stages:
       displayName: "Use JDK11 by default"
     
     - powershell: |
-        $GetSnapshots = Get-ChildItem "$TestResultsPath\**\*.coverage"
+        $GetSnapshots = Get-ChildItem "$(Pipeline.Workspace)\**\Merged.coverage.xml"
         if ($GetSnapshots.count -gt 0) {
             foreach ($snapshot in $GetSnapshots) {
                 Write-Host Snapshot found: $snapshot
             }
         } else {
-            Write-Host No snapshots found!
+            Write-Error No snapshots found!
+            exit 1
         }
         $branchSource = "$(Build.SourceBranch)"
         $ThisBranch = $branchSource -replace "refs/heads/", ""
@@ -5811,7 +5812,7 @@ stages:
         }
         $SonarRunnerXML += @"
             <Property Name=`"sonar.cs.vstest.reportsPaths`">$(Pipeline.Workspace)\TestResults*.trx</Property>
-            <Property Name=`"sonar.cs.vscoveragexml.reportsPaths`">$(Pipeline.Workspace)\**\*.coverage</Property>
+            <Property Name=`"sonar.cs.vscoveragexml.reportsPaths`">$(Pipeline.Workspace)\**\Merged.coverage.xml</Property>
         </SonarQubeAnalysisProperties>
         "@
         
