7566-Looking for coverage snapshots

--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5783,13 +5783,14 @@ stages:
       displayName: "Use JDK11 by default"
     
     - powershell: |
+        dir $(Pipeline.Workspace)
         $GetSnapshots = Get-ChildItem "$(Pipeline.Workspace)\**\Merged.coverage.xml"
         if ($GetSnapshots.count -gt 0) {
             foreach ($snapshot in $GetSnapshots) {
                 Write-Host Snapshot found: $snapshot
             }
         } else {
-            Write-Error No snapshots found!
+            Write-Error -Message "No snapshots found!"
             exit 1
         }
         $branchSource = "$(Build.SourceBranch)"
