--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5783,7 +5783,7 @@ stages:
       displayName: "Use JDK11 by default"
     
     - powershell: |
-        dir $(Pipeline.Workspace)
+        dir "$(Pipeline.Workspace)"
         $GetSnapshots = Get-ChildItem "$(Pipeline.Workspace)\**\Merged.coverage.xml"
         if ($GetSnapshots.count -gt 0) {
             foreach ($snapshot in $GetSnapshots) {
