7566-remove more logging

--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5815,7 +5815,7 @@ stages:
         IF "%bamboo_RerunBuildTriggerReason_noOfRetries%"=="" (set SonarVersion="$(Build.TriggeredBy.BuildId)") ELSE (set SonarVersion="$(Build.TriggeredBy.BuildId)-%RerunBuildTriggerReason_noOfRetries%")
         cd "D:\Builds\SonarQube"
         nuget install dotnet-framework-sonarscanner -ExcludeVersion -NonInteractive -OutputDirectory .
-        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" begin /o:warewolf /k:Warewolf_DotNet_Framework /n:Warewolf_DotNet_Framework /v:%SonarVersion% /d:sonar.login="%SonarPassword%" /s:"$(Pipeline.Workspace)\SonarQube.Analysis.xml" /d:sonar.projectBaseDir="D:\Builds\SonarQube" /d:sonar.verbose=true
+        ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" begin /o:warewolf /k:Warewolf_DotNet_Framework /n:Warewolf_DotNet_Framework /v:%SonarVersion% /d:sonar.login="%SonarPassword%" /s:"$(Pipeline.Workspace)\SonarQube.Analysis.xml" /d:sonar.projectBaseDir="D:\Builds\SonarQube"
       env:
         SonarPassword: $(SonarAdminPassword)
       displayName: "Begin Sonar Runner"
