--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -1,5 +1,9 @@
-trigger:
-  none
+schedules:
+- cron: '0 0 * * *'
+  displayName: Daily midnight build
+  branches:
+    include:
+    - *
 
 pool:
   vmImage: 'windows-2022'
