--- a/Dev/Warewolf.ResourceManagement/Warewolf.ResourceManagement.csproj
+++ b/Dev/Warewolf.ResourceManagement/Warewolf.ResourceManagement.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="IResourceActivityCache.cs" />
     <Compile Include="ResourceActivityCache.cs" />
+    <Compile Include="ResourceActivityParseWithCacheParameters.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dev2.Common.Interfaces\Dev2.Common.Interfaces.csproj">
