--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -5755,6 +5755,12 @@ stages:
     - checkout: self
       clean: true
       persistCredentials: true
+      
+    - task: JavaToolInstaller@0
+      inputs:
+        versionSpec: '17'
+        jdkArchitectureOption: 'x64'
+        jdkSourceOption: 'PreInstalled'
     
     - task: DownloadPipelineArtifact@2
       inputs:
