7612-remove use of Bamboo variable here

--- a/Dev/.azure/pipeline-with-coverage.yml
+++ b/Dev/.azure/pipeline-with-coverage.yml
@@ -3,7 +3,7 @@ schedules:
   displayName: Daily midnight build
   branches:
     include:
-    - '*'
+    - refs/heads/*
 
 pool:
   vmImage: 'windows-2022'
@@ -5817,12 +5817,14 @@ stages:
       displayName: "Write Sonar Runner"
         
     - script: |
-        IF "%bamboo_RerunBuildTriggerReason_noOfRetries%"=="" (set SonarVersion="$(Build.TriggeredBy.BuildId)") ELSE (set SonarVersion="$(Build.TriggeredBy.BuildId)-%RerunBuildTriggerReason_noOfRetries%")
+        IF "%JobAttempt%"=="1" (set SonarVersion="%SonarVersion%") ELSE (set SonarVersion="%SonarVersion%-%RerunBuildTriggerReason_noOfRetries%")
         cd "D:\Builds\SonarQube"
         nuget install dotnet-framework-sonarscanner -ExcludeVersion -NonInteractive -OutputDirectory .
         ".\dotnet-framework-sonarscanner\tools\SonarScanner.MSBuild.exe" begin /o:warewolf /k:Warewolf_DotNet_Framework /n:Warewolf_DotNet_Framework /v:%SonarVersion% /d:sonar.login="%SonarPassword%" /s:"$(Pipeline.Workspace)\SonarQube.Analysis.xml" /d:sonar.projectBaseDir="D:\Builds\SonarQube"
       env:
         SonarPassword: $(SonarAdminPassword)
+        SonarVersion: $(Build.TriggeredBy.BuildId)
+        JobAttempt: $(System.JobAttempt)
       displayName: "Begin Sonar Runner"
       
     - task: PowerShell@2
