7624-patch for error: "C:\Builds\PGDATA was unexpected at this time."

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3181,7 +3181,7 @@ stages:
         targetPath: '$(Agent.BuildDirectory)'
   
     - script: |
-        if(!(Test-Path C:\Builds\PGDATA)) {mkdir C:\Builds\PGDATA}
+        if(!(Test-Path "C:\Builds\PGDATA")) {mkdir "C:\Builds\PGDATA"}
         docker run -d --restart unless-stopped --name=postgres-connector-testing --platform=linux --memory 1g -p 5433:5432 -v C:\Builds\PGDATA:/var/lib/postgresql/data registry.gitlab.com/warewolf/postgres-connector-testing postgres -c config_file=/etc/postgres.conf -c hba_file=/etc/pg_hba.conf
         cd /d "$(Agent.BuildDirectory)"
         powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
