7624-still commenting out tasks for now

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3174,12 +3174,12 @@ stages:
     steps:
     - checkout: none
     
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        buildType: 'current'
-        artifactName: 'TestBinaries'
-        targetPath: '$(Agent.BuildDirectory)'
-  
+#    - task: DownloadPipelineArtifact@2
+#      inputs:
+#        buildType: 'current'
+#        artifactName: 'TestBinaries'
+#        targetPath: '$(Agent.BuildDirectory)'
+#  
     - script: |
         IF NOT EXIST C:\Builds\PGDATA mkdir C:\Builds\PGDATA
         git clone https://ashley.lewis@theunlimited.co.za:%PushVSTestContainer%@gitlab.com/warewolf/postgres-connector-testing.git
