7624-use tocken for git clone here

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3182,12 +3182,14 @@ stages:
 #  
     - script: |
         IF NOT EXIST C:\Builds\PGDATA mkdir C:\Builds\PGDATA
-        git clone https://ashley.lewis@theunlimited.co.za:%PushVSTestContainer%@gitlab.com/warewolf/postgres-connector-testing.git
+        git clone https://%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
+        copy /Y postgres-connector-testing\pg_hba.conf %PGDATA%\pg_hba.conf
+        copy /Y postgres-connector-testing\postgres.conf %PGDATA%\postgresql.conf
         REM cd /d "$(Agent.BuildDirectory)"
         REM powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
       env:
-        PushVSTestContainer: $(VSTestContainerPassword)
+        TestDependencyPassword: $(VSTestContainerPassword)
   
 #    - task: PublishTestResults@2
 #      inputs:
