7624-using url encoding

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3182,7 +3182,7 @@ stages:
 #  
     - script: |
         IF NOT EXIST C:\Builds\PGDATA mkdir C:\Builds\PGDATA
-        git clone https://%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
+        git clone https://ashley.lewis%40theunlimited.co.za:%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
         copy /Y postgres-connector-testing\pg_hba.conf %PGDATA%\pg_hba.conf
         copy /Y postgres-connector-testing\postgres.conf %PGDATA%\postgresql.conf
         REM cd /d "$(Agent.BuildDirectory)"
