--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3183,8 +3183,11 @@ stages:
     - script: |
         IF NOT EXIST C:\Builds\PGDATA mkdir C:\Builds\PGDATA
         git clone https://ashley.lewis%40theunlimited.co.za:%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
-        copy /Y postgres-connector-testing\pg_hba.conf %PGDATA%\pg_hba.conf
-        copy /Y postgres-connector-testing\postgres.conf %PGDATA%\postgresql.conf
+        copy /Y "postgres-connector-testing\pg_hba.conf" "%PGDATA%\pg_hba.conf"
+        copy /Y "postgres-connector-testing\postgres.conf" "%PGDATA%\postgresql.conf"
+        type postgres-connector-testing\postgres.backup | psql --username postgres postgres
+        createdb TestDB
+        type postgres-connector-testing\testdb.backup | psql --username postgres TestDB
         REM cd /d "$(Agent.BuildDirectory)"
         REM powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
