7624-using psql in bin folder

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3185,11 +3185,11 @@ stages:
         git clone https://ashley.lewis%40theunlimited.co.za:%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
         copy /Y "postgres-connector-testing\pg_hba.conf" "%PGDATA%\pg_hba.conf"
         copy /Y "postgres-connector-testing\postgres.conf" "%PGDATA%\postgresql.conf"
-        type postgres-connector-testing\postgres.backup | psql --username postgres postgres
+        type postgres-connector-testing\postgres.backup | %PGBIN%\psql --username postgres postgres
         createdb TestDB
-        type postgres-connector-testing\testdb.backup | psql --username postgres TestDB
-        REM cd /d "$(Agent.BuildDirectory)"
-        REM powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        type postgres-connector-testing\testdb.backup | %PGBIN%\psql --username postgres TestDB
+#        cd /d "$(Agent.BuildDirectory)"
+#        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
       env:
         TestDependencyPassword: $(VSTestContainerPassword)
