7624-srong servicename for postgres

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3185,7 +3185,7 @@ stages:
         git clone https://ashley.lewis%40theunlimited.co.za:%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
         copy /Y "postgres-connector-testing\pg_hba.conf" "%PGDATA%\pg_hba.conf"
         copy /Y "postgres-connector-testing\postgres.conf" "%PGDATA%\postgresql.conf"
-        sc start postgres
+        sc start postgresql-x64-14
         type postgres-connector-testing\postgres.backup | "%PGBIN%\psql" --username postgres postgres
         "%PGBIN%\createdb" TestDB
         type postgres-connector-testing\testdb.backup | "%PGBIN%\psql" --username postgres TestDB
