--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3185,6 +3185,7 @@ stages:
         git clone https://ashley.lewis%40theunlimited.co.za:%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
         copy /Y "postgres-connector-testing\pg_hba.conf" "%PGDATA%\pg_hba.conf"
         copy /Y "postgres-connector-testing\postgres.conf" "%PGDATA%\postgresql.conf"
+        sc config $serviceName start= auto
         sc start postgresql-x64-14
         type postgres-connector-testing\postgres.backup | "%PGBIN%\psql" --username postgres postgres
         "%PGBIN%\createdb" TestDB
