--- a/Dev/Dev2.SignalR.Wrappers.New/Dev2.SignalR.Wrappers.New.csproj
+++ b/Dev/Dev2.SignalR.Wrappers.New/Dev2.SignalR.Wrappers.New.csproj
@@ -90,6 +90,7 @@
     <PackageReference Include="log4net">
       <Version>2.0.12</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
