7634-add legacy server proxy for conncting to 2.8 servers

--- a/Dev/Dev2.Studio.Core/Dev2.Studio.Core.csproj
+++ b/Dev/Dev2.Studio.Core/Dev2.Studio.Core.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Models\DataList\RecordSetItemModel.cs" />
     <Compile Include="Models\DataList\ScalarItemModel.cs" />
     <Compile Include="NetworkStateChangedEventArgs.cs" />
+    <Compile Include="Network\LegacyServerProxy.cs" />
     <Compile Include="Network\ServerProxyWithoutChunking.cs" />
     <Compile Include="CustomControls\CachingContentHost.cs" />
     <Compile Include="DataList\ActivityDataMappingBuilder.cs" />
