--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3187,7 +3187,7 @@ stages:
         copy /Y "postgres-connector-testing\postgres.conf" "%PGDATA%\postgresql.conf"
         sc config postgresql-x64-14 start= auto
         sc start postgresql-x64-14
-        timeout /nobreak /t 10
+        ping -n 10 127.0.0.1 > nul
         type postgres-connector-testing\postgres.backup | "%PGBIN%\psql" --username postgres postgres
         "%PGBIN%\createdb" TestDB
         type postgres-connector-testing\testdb.backup | "%PGBIN%\psql" --username postgres TestDB
