--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3750,9 +3750,21 @@ stages:
         targetPath: '$(Agent.BuildDirectory)'
   
     - script: |
+        IF NOT EXIST C:\Builds\PGDATA mkdir C:\Builds\PGDATA
+        git clone https://ashley.lewis%40theunlimited.co.za:%TestDependencyPassword%@gitlab.com/warewolf/postgres-connector-testing.git
+        copy /Y "postgres-connector-testing\pg_hba.conf" "%PGDATA%\pg_hba.conf"
+        copy /Y "postgres-connector-testing\postgres.conf" "%PGDATA%\postgresql.conf"
+        sc config postgresql-x64-14 start= auto
+        sc start postgresql-x64-14
+        ping -n 10 127.0.0.1 > nul
+        type postgres-connector-testing\postgres.backup | "%PGBIN%\psql" --username postgres postgres
+        "%PGBIN%\createdb" TestDB
+        type postgres-connector-testing\testdb.backup | "%PGBIN%\psql" --username postgres TestDB
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
+      env:
+        TestDependencyPassword: $(VSTestContainerPassword)
 
     - task: PublishBuildArtifacts@1
       inputs:
