7634-wrong path here to test run script

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3761,7 +3761,7 @@ stages:
         "%PGBIN%\createdb" TestDB
         type postgres-connector-testing\testdb.backup | "%PGBIN%\psql" --username postgres TestDB
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category DatabaseWorkflowExecution -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
       env:
         TestDependencyPassword: $(VSTestContainerPassword)
