--- a/Dev/Warewolf.Studio.ViewModels.Tests/Warewolf.Studio.ViewModels.Tests.csproj
+++ b/Dev/Warewolf.Studio.ViewModels.Tests/Warewolf.Studio.ViewModels.Tests.csproj
@@ -269,11 +269,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Caliburn.Micro.Core" Version="4.0.212" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
       <Version>16.11.0</Version>
     </PackageReference>
     <PackageReference Include="Moq">
-      <Version>4.16.1</Version>
+      <Version>4.18.2</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.1.2</Version>
