--- a/Dev/Dev2.Common.Interfaces/Dev2.Common.Interfaces.csproj
+++ b/Dev/Dev2.Common.Interfaces/Dev2.Common.Interfaces.csproj
@@ -457,7 +457,6 @@
       <Version>6.15.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
-    <PackageReference Include="Microsoft.Exchange.WebServices.NETStandard" Version="1.1.3" />
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
     </PackageReference>
@@ -467,6 +466,7 @@
     <PackageReference Include="Caliburn.Micro" Version="4.0.212" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' != '.NETFramework'">
+	  <PackageReference Include="Microsoft.Exchange.WebServices.NETStandard" Version="1.1.3" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="UiPath.Workflow">
       <Version>6.0.3</Version>
@@ -480,6 +480,7 @@
     <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
+	  <PackageReference Include="Microsoft.Exchange.WebServices" Version="1.1.3" />
     <PackageReference Include="Prism.Mvvm">
       <Version>1.1.1</Version>
     </PackageReference>
