--- a/Dev/Warewolf.Studio.Core/Warewolf.Studio.Core.csproj
+++ b/Dev/Warewolf.Studio.Core/Warewolf.Studio.Core.csproj
@@ -140,50 +140,49 @@
     <PackageReference Include="FontAwesome6.Fonts.WinUI" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
-    <Reference Include="InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Binaries\InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1.dll</HintPath>
-    </Reference>
-    <Reference Include="InfragisticsWPF4.DataManager.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Binaries\InfragisticsWPF4.DataManager.v15.1.dll</HintPath>
-    </Reference>
-    <Reference Include="InfragisticsWPF4.DockManager.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Binaries\InfragisticsWPF4.DockManager.v15.1.dll</HintPath>
-    </Reference>
-    <Reference Include="InfragisticsWPF4.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Binaries\InfragisticsWPF4.v15.1.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Presentation" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-    <PackageReference Include="Expression.Blend.Sdk">
-      <Version>1.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="FontAwesome.WPF">
-      <Version>4.5.0.8</Version>
-    </PackageReference>>
-    <PackageReference Include="Prism.Mvvm">
-      <Version>1.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.UnityExtensions">
-      <Version>5.0.1</Version>
-    </PackageReference>
+	  <Reference Include="InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+		  <SpecificVersion>false</SpecificVersion>
+		  <HintPath>..\Binaries\InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1.dll</HintPath>
+	  </Reference>
+	  <Reference Include="InfragisticsWPF4.DataManager.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+		  <SpecificVersion>False</SpecificVersion>
+		  <HintPath>..\Binaries\InfragisticsWPF4.DataManager.v15.1.dll</HintPath>
+	  </Reference>
+	  <Reference Include="InfragisticsWPF4.DockManager.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+		  <SpecificVersion>False</SpecificVersion>
+		  <HintPath>..\Binaries\InfragisticsWPF4.DockManager.v15.1.dll</HintPath>
+	  </Reference>
+	  <Reference Include="InfragisticsWPF4.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
+		  <SpecificVersion>False</SpecificVersion>
+		  <HintPath>..\Binaries\InfragisticsWPF4.v15.1.dll</HintPath>
+	  </Reference>
+	  <Reference Include="PresentationCore" />
+	  <Reference Include="PresentationFramework" />
+	  <Reference Include="System" />
+	  <Reference Include="System.Configuration" />
+	  <Reference Include="System.Core" />
+	  <Reference Include="System.Windows.Forms" />
+	  <Reference Include="System.Windows.Presentation" />
+	  <Reference Include="System.Xaml" />
+	  <Reference Include="System.Xml.Linq" />
+	  <Reference Include="System.Data.DataSetExtensions" />
+	  <Reference Include="Microsoft.CSharp" />
+	  <Reference Include="System.Data" />
+	  <Reference Include="System.Xml" />
+	  <Reference Include="WindowsBase" />
+	  <PackageReference Include="Expression.Blend.Sdk">
+		  <Version>1.0.2</Version>
+	  </PackageReference>
+	  <PackageReference Include="FontAwesome.WPF">
+		  <Version>4.5.0.8</Version>
+	  </PackageReference>
+	  <PackageReference Include="Prism.Mvvm">
+		  <Version>1.1.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Prism.UnityExtensions">
+		  <Version>5.0.1</Version>
+	  </PackageReference>
   </ItemGroup>
- 
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
