--- a/Dev/Dev2.Infrastructure.Tests/Dev2.Infrastructure.Tests.csproj
+++ b/Dev/Dev2.Infrastructure.Tests/Dev2.Infrastructure.Tests.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D754B817-A714-4E6E-BD46-8C4FFFFBDACB}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
