--- a/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
+++ b/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1FD73E36-FC73-4BDF-BCBA-278A44F06550}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
