add multitargetting to solution wide build outputs

--- a/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
+++ b/Dev/Dev2.Studio.Core.Tests/Dev2.Studio.Core.Tests.csproj
@@ -296,6 +296,7 @@
       <Project>{4bd0c970-ecd6-470b-b9ee-17ecfe53e5fb}</Project>
       <Name>Dev2.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Dev2.Diagnostics.Tests\Dev2.Diagnostics.Tests.csproj" />
     <ProjectReference Include="..\Dev2.Diagnostics\Dev2.Diagnostics.csproj">
       <Project>{a7d9da27-f023-4588-aa64-ac2de44c0b82}</Project>
       <Name>Dev2.Diagnostics</Name>
